<resources>
    <string name="app_name">FeedTheBelly</string>
    <string name="projectTitle">Feed The Belly</string>
    <string name="password">Enter your password</string>
    <string name="email">Enter your email</string>
    <string name="donate">Donate Food</string>
    <string name="rescue">Rescue Food</string>
    <string name="signIn">Already have an account? Log In</string>
    <string name="title">What would you like to do?</string>
    <string name="donateTxt">If you are a food business</string>
    <string name="rescueTxt">If you are a charity/Not-for-profit</string>
    <string name="registrationForm">Register Your Restaurant</string>
    <string name="restuarant_Name">Restuarant Name </string>
    <string name="RestaurantNameEditText">Enter your Restauarant Name</string>
    <string name="txtview" />
    <string name="txtViewDesc">Restaurant Description </string>
    <string name="description">Enter Description to your restaurant</string>
    <string name="addAddress">Address *</string>
    <string name="add1">Street Address</string>
    <string name="add2">Street Address Line2</string>
    <string name="add3">City</string>
    <string name="add6">Postal Code</string>
    <string name="add" />
    <string name="add4">StateorpROVINCE</string>
    <string name="Add4">State or Province</string>
    <string name="add5">Country</string>
    <string name="website">Website</string>
    <string name="websiteEditTxt">Enter restaurant Website Link</string>
    <string name="restuarantID">Restuarant ID</string>
    <string name="rest_ID">Restuarant ID *</string>
    <string name="Rest_id">Restaurant ID *</string>
    <string name="RestaurantNameEditTxt">Enter your Restaurant Name</string>
    <string name="NGONameEditTxt">Enter your NGO Name</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="rest_name">Restaurant Name</string>
    <string name="restaurant_id">Enter Restaurant ID</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="No">No</string>
    <string name="txtViewDelivery">Delivery *</string>
    <string name="txtViewTakeAway">Take Away *</string>
    <string name="deliveryRadius">Delivery Radius*</string>
    <string name="deliveryRadiusTxt">The radius, in miles that you deliver to.</string>
    <string name="DeliveryPostalCodes">"DeliveryPostalCodes"</string>
    <string name="deliverypostalcodes">if you restrict delivery to certain zipcodes,enter them here,separated by commas.</string>
    <string name="deliveryTime">Delivery Extra Time*</string>
    <string name="deliveryExtraTimeEditText">For delivery orders,how much extra time should we add to the takeout time?</string>
    <string name="editTxtDeliveryExtraTime">For delivery orders, extra time needed to takeout time?</string>
    <string name="deliveryTimeExtra">For delivery, how much extra time taken than takeout time</string>
    <string name="txtViewHours">Hours *</string>
    <string name="txtViewWeekday">Mon-Fri</string>
    <string name="textViewSat">"Saturday From:"</string>
    <string name="textViewSunday">Sunday From:</string>
    <string name="textViewWeekday">Monday-Friday From:</string>
    <string name="txtViewWeekday2">Monday-Friday To:</string>
    <string name="txtViewSaturday2">Saturday To:</string>
    <string name="txtViewSunday2">Sunday To:</string>
    <string name="buttonSubmit">Submit</string>
    <string name="ngo_name">NGO Name</string>
    <string name="ngo_email">NGO Email Address</string>
    <string name="ngo_phone">NGO Contact Number</string>
    <string name="ngo_password">Enter the password</string>
    <string name="RegisterSubmit">Register</string>
    <string name="txtViewEmailAddress">Restaurant Email Address </string>
    <string name="txtViewPassword">Enter the Password </string>
    <string name="txtViewConfirmPassword">Confirm the Password</string>


    <string name="hintEmail">"Enter the email Address"</string>
    <string name="hintPhoneNumber">"Enter Contact Number"</string>
    <string name="textViewContactNumber">Restaurant Contact Number</string>
    <string name="btnTextDoNotHaveAcc">Don\'t have an account? Sign Up</string>
    <string name="btnTextLogin">Log in</string>
    <string name="txtOrganizationName">Organization Name</string>
    <string name="hintTextOrganizationName">Enter Organization Name</string>
    <string name="txtViewCharitable">Organization ID*</string>
    <string name="hintTextCharitNo">Enter Organization Registration No.</string>
    <string name="txtViewNgoDesc">Organization Description*</string>
    <string name="hintTextOrgDesc">Enter Organization Description</string>
    <string name="txtViewOrgEmail">Organization Email Address</string>
    <string name="txtViewOrgContact">Organization Contact Number</string>
    <string name="Cuisine_Type">Enter the Cuisine Type :</string>
    <string name="Fill_in_Form">Fill in the Food Details</string>
    <string name="Expiry_Date">Best Before Date for the food</string>
    <string name="Category_Type">Enter the Food Category :</string>
    <string name="NumOfPlates">"Enter the Number of Plates Available : "</string>
    <string name="ExpiryDate">Enter the Expiry-Date for the Food</string>
    <string name="ConfirmTheEntry">Confirm the Entries</string>
    <string name="Num_Of_Plates">Enter Number of Plates</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="password1">Enter the password</string>
    <string name="password2">Confirm the password</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string-array name="Cuisine_types">
        <item></item>
        <item>Chinese</item>
        <item>Mexican</item>
        <item>Indonesian</item>
        <item>French</item>
        <item>Italian</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Indian</item>
        <item>Japanese</item>
        <item>Spanish</item>
        <item>Lebanese</item>
        <item>American</item>
        <item>Mediterranean</item>
        <item>Korean</item>
        <item>Vietnamese</item>
        <item>Other</item>

    </string-array>
    <string-array name="category_arrays">
        <item></item>
        <item>Appetizers</item>
        <item>Salads and soups</item>
        <item>Main Course</item>
        <item>Desserts</item>
        <item>Drinks</item>
    </string-array>

    <string name="txtViewTitle">A Better Way To Donate</string>
    <string name="txtViewMessage">NGOs can receive healthy food from restaurants.</string>
    <string name="btnTextSkip">Skip</string>
    <string name="txtViewSwipe">Swipe left to continue</string>
    <string name="txtViewTitle2">Donate Money</string>
    <string name="txtViewMessage2">Anyone can donate some money if you do not have any excess food</string>
    <string name="txtViewTitle3">Keep A Record</string>
    <string name="txtViewMessage3">Measure the amount of food donated by your restaurant</string>
    <string name="txtViewFragments">Fragment Page</string>
    <string name="txtPageNumber">0</string>
    <string name="txtViewHome">Home</string>
    <string name="txtLogout">Log out</string>
    <string name="txtAdd">Add Dishes</string>
    <string name="txtList">View Dishes</string>
    <string name="txtViewDashboard">My Dashboard</string>
    <string name="imgHome">Home Pic</string>
    <string name="imgAdd">Add Items Pic</string>
    <string name="imgView">View Dishes Pic</string>
    <string name="imgLogout">Logout Pic</string>
    <string name="imgProfile">Profile</string>
    <string name="txtRestaurants">View Donations</string>
    <string name="txtConfirmed">Confirmed Orders</string>
    <string name="imgRestList">Restaurants List Pic</string>
    <string name="imgConfirmed">Confirmed Orders Pic</string>
    <string name="uploadFile">Upload File</string>
    <string name="empty_ID">ID is required</string>
    <string name="City_error">City cannot be empty</string>
    <string name="Country_error">Country cannot be empty</string>
    <string name="Postal_error">Postal code cannot be empty</string>
    <string name="website_error">Website format is incorrect</string>
    <string name="postal_length_error">Postal code length should be equal to six</string>
    <string name="State_error">State or Province cannot be empty</string>
    <string name="Addline_error">Address cannot be empty</string>
    <string name="txtViewProfile">Profile</string>
    <string name="UserType">"User Type: "</string>
    <string name="IDerror">ID should be 6 digit</string>
    <string name="back_button">Go to Dashboard</string>
    <string name="Desc_error">Write about your NGO</string>
    <string name="websiteNGO">Enter NGO Website Link</string>
    <string name="txtApprove">Approve Donation</string>
    <string name="btnDetails">Details</string>
    <string name="sorryValue">Sorry we currently have PayPal only</string>
    <string name="btnTextNext">Click Next To Confirm</string>
    <string name="txtViewRest">View Restaurants</string>
    <string name="backToDashBoard">Click to go Back</string>
    <string name="swipebar">Swipe..to View Next</string>
    <string name="swipeText">Swipe to View Next..</string>
    <string-array name="UserType">
        <item></item>
        <item>NGO</item>
        <item>RESTAURANT</item>
    </string-array>
</resources>