<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regestration_Restauarant">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtOrganizationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="true"
                android:text="@string/txtOrganizationName"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextOrganizationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/hintTextOrganizationName"
                android:inputType="textPersonName" />


            <TextView
                android:id="@+id/txtViewCharitableNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="true"
                android:text="@string/txtViewCharitable"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCharitNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/hintTextCharitNo"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtViewOrgDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="true"
                android:text="@string/txtViewNgoDesc"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTxtOrgDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/hintTextOrgDesc"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textViewOrgEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="true"
                android:text="@string/txtViewOrgEmail"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/hintEmail"
                android:includeFontPadding="true"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textViewContactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="true"
                android:text="@string/txtViewOrgContact"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/hintPhoneNumber"
                android:includeFontPadding="true"
                android:inputType="number|phone" />

            <TextView
                android:id="@+id/txtViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="true"
                android:text="@string/addAddress"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextStreetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/add1"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextStreet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/add2"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/add3"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/Add4"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/add5"
                android:includeFontPadding="true"
                android:inputType="textPersonName"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/add6"
                android:inputType="textPostalAddress"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textViewWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="true"
                android:text="@string/website"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15sp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|right"
                android:hint="@string/websiteEditTxt"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.4"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/buttonSubmit"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18dp"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>